--- a/style/style.css
+++ b/style/style.css
@@ -134,3 +134,173 @@ line-height: 24px;
 .nd-btn{
     margin: 30px auto;
 }
+
+
+
+/* plan related stylee */
+.donate-plan{
+    text-align: center;
+    /* margin: 0 auto; */
+    /* max-width: 1400px; */
+}
+/* .our-donate-plan{
+    max-width: 690px;
+    text-align: center;
+    margin: 0 auto;
+
+} */
+.plan-description{
+    color: #121212;
+    max-width: 690px;
+    width: 100%;
+    margin: 0 auto 50px;
+}
+
+.plan-card-container{
+     margin: 0 auto 130px;
+    max-width: 1200px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    place-items: center;
+}
+
+.plan-card{
+    background-color: rgba(4, 74, 82, 0.1);
+    padding: 54px 22px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    border-radius: 5px;
+}
+.plan-card-2{
+    background-color: rgba(207, 18, 18, 0.1);
+}
+.plan-card-3{
+    background-color: rgb(247, 220, 182);
+}
+.card-pinture{
+    margin-bottom: 32px;
+}
+.plan-card-title{
+    font-size: 24px;
+font-weight: 600;
+    margin-bottom: 16px;
+    color: rgba(18, 18, 18, 1);
+}
+.card-description{
+    text-align: start;
+    margin-bottom: 54px;
+}
+
+
+/* .donation{
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 80px;
+    margin: 130px auto 0;
+    max-width: 1200px;
+    width: 100%;
+    place-items: center;
+    justify-content: center;
+    align-items: center;
+    padding-right: 100px;
+    
+} */
+ /* .donation{
+    text-align: center;
+    border: 1px solid rebeccapurple;
+
+ } */
+ .donation-grid{
+    max-width: 1100px;
+    margin: 0 auto 100px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 80px;
+    /* border: 1px solid firebrick; */
+    padding-right: 97px;
+ }
+ .titlee{
+    margin: 0;
+ }
+.donation-description{
+    margin: 20px auto 0;
+    color: #707070;
+}
+.donation-button{
+    margin-top: 30px;
+}
+.photo{
+     border-radius: 10px;
+    /* max-width: 460px; */
+    width: 100%;
+    filter: brightness(70%);
+}
+.updates-section{
+    text-align: center;
+}
+.update-description{
+    color: #707070 ;
+    max-width: 690px;
+    width: 100%;
+    margin: 0 auto 50px;
+}
+
+.info-box{
+    background: #FFF4D6;
+    padding: 75px 190px;
+    border-radius: 8px;
+    margin: 0 auto;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 130px;
+}
+.info-box input{
+    max-width: 275px;
+    width: 100%;
+    background-color: #D9D9D9;
+    border: none;
+    border-radius: 3px;
+    padding: 14px;
+}
+.Subscribe{
+    font-size: 16px;
+font-weight: 500;
+line-height: 20px;
+color: rgba(255, 255, 255, 1);
+padding: 14px 44px;
+}
+.footer{
+    text-align: center;
+    background-color: #0B0D17;
+}
+.footer-title{
+    padding: 44px 0;
+    color: rgba(255, 89, 89, 1);
+font-size: 36px;
+font-weight: 400;
+}
+.footer-description{
+    font-size: 14px;
+font-weight: 400;
+color: #D9DBE1;
+margin-top: 24px;
+}
+
+
+@media screen and (max-width: 576px) {
+   .card-container{
+    flex-direction: column;
+    align-items: center;
+   } 
+   .plan-card-container{
+    grid-template-columns: repeat(1,1fr);
+    width: 80%;
+   }
+}
