--- a/style/style.css
+++ b/style/style.css
@@ -249,17 +249,18 @@ font-weight: 600;
     width: 100%;
     margin: 0 auto 50px;
 }
-
-.info-box{
+.info-parent{
     background: #FFF4D6;
     padding: 75px 190px;
     border-radius: 8px;
     margin: 0 auto;
     width: 40%;
+    margin-bottom: 130px;
+}
+.info-box{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-bottom: 130px;
 }
 .info-box input{
     max-width: 275px;
@@ -298,9 +299,15 @@ margin-top: 24px;
    .card-container{
     flex-direction: column;
     align-items: center;
+    /* justify-content: center; */
    } 
-   .plan-card-container{
+   .plan-card-container, 
+.donation-grid{
     grid-template-columns: repeat(1,1fr);
     width: 80%;
+   }
+   .donation-grid{
+    align-items: center;
+    padding: 0;
    }
 }
